Closed Bug 1561929 Opened 7 years ago Closed 7 years ago

slider.snapMultiplier should be zero (disabled) by default on Linux

Categories

(Core :: Preferences: Backend, defect)

69 Branch
Unspecified
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla69
Tracking Status
firefox-esr60 --- unaffected
firefox-esr68 --- unaffected
firefox67 --- unaffected
firefox67.0.1 --- unaffected
firefox68 --- unaffected
firefox69 --- fixed

People

(Reporter: ke5trel, Assigned: n.nethercote)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

The default value of slider.snapMultiplier on Linux has changed from 0 to 6 recently. This causes the scrollbar position to reset when dragged too far away which is not standard behavior for GTK applications.

Regression window:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=d8a83a5f0fb9165f97d8000976bb2241d44cda34&tochange=c0056880ec37b2845b831dbe53e3197fa696e4a5

Regressed by Bug 1558358.

This pref was a mess before bug 1558358. It appeared in StaticPrefList.h and then appeared twice in all.js (which overrides the one in StaticPrefList.h). jya and I discussed this in the bug. What we missed is that the second appearance in all.js is within a #ifdef XP_WIN block that spans several hundred lines, and is thus easy to overlook.

The fix for this should occur in StaticPrefList.h; a #ifdef XP_WIN can be applied to the slider.snapMultiplier entry in there. There is no need for an entry in all.js.

But thank you for the report :)

Pushed by nnethercote@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/8ed70f1397e9 Fix slider.snapMultiplier pref values. r=jya
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69
Assignee: nobody → n.nethercote
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: