Bug 1561929 - Fix slider.snapMultiplier pref values. r=jya

Differential Revision: https://phabricator.services.mozilla.com/D36268